themes/si8/less/custom/header.less
body.user-logged-in{
  padding-top: 336px !important;
  &.ridotto{
    padding-top: 212px !important;
  }
  #mainheader{
    top: 80px;
  }
}

#mainheader {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  transition: all .3s ease 0s;
  -webkit-transition: all .3s ease 0s;
  z-index: 100;

  &.ridotto{
    height: 64px;

    .header-up{
      height: 4px;
      overflow: hidden;
    }

    .header-down{
      height: 0px;
      overflow: hidden;
    }

    .site-title{
      padding: 14px 0;
      font-size: 2.5rem;
      transition: all .3s ease 0s;
      -webkit-transition: all .3s ease 0s;
      .subtitle{
        display: none;
      }
    }

    .icon-social{
      display: none;
    }

    input.form-text{
      height: 42px;
    }

    .header-main {
      height: 64px;
      .hamburger-toggle {
        margin-top: 0;
      }
      .ricerca {
        margin-top: 9px;
        button {
          height: 42px;
        }
      }
    }

    .header-top {
      .selettorelingua {
        .select-wrapper:after{
          display: none;
        }
      }
    }
  }
}

.header-top {
  background: @brand-gray;
  color: #fff;
  font-family: @font-footer;



  a {
    color: #fff;
  }

  .logo {
    width: 25px;
    height: 25px;
    margin-right: 10px;
  }

  .header-top2 {
    position: absolute;
    top: 0;
    right: 0;
  }

  .header-top1 {
    padding: 10px 10px 0 10px;
    font-weight: bold;

    @media (max-width: @screen-sm) {
      padding: 0;

      .ras-mobile {
        margin-top: 6px;
        font-size: 1.2rem;
      }
    }
  }

  .selettorelingua {
    display: inline-block;
    width: 150px !important;
    background-color: @brand-third;
    //padding: 7px;
    text-transform: uppercase;

    .select-wrapper select{
      line-height: inherit;
    }

    .select-wrapper:after {
      color: #fff;
    }

    select {
      border: none;
      border-radius: 0;
      background-color: @brand-third;
      color: #fff;
      width: 150px !important;
      box-shadow: none;
      text-transform: uppercase;
      height: 48px;


      option {
        background-color: @brand-third;
        color: #fff;

        &:hover {
          background: red;
        }
      }
    }

  }

  .accedi {
    border-radius: 0;
    background-color: @brand-secondary;
    display: inline-block;
    padding: 14px 60px;
    color: #fff;
    text-transform: uppercase;
    font-weight: bold;


    &:hover {
      //color: #fff;
      text-decoration: underline;
    }
  }


  .selettorelingua {
    background-color: @brand-third;
    float: left;

    ul {
      margin-bottom: 0;
      padding: 14px;

      li {
        display: inline-block;
        text-transform: uppercase;
        list-style-type: none;
        //border-right: 1px solid #fff;


        &::after {
          content: ' |';
        }

        &:last-child::after{
          content: '';
        }

        a {
          padding: 0 7px;

          &.is-active {
            font-weight: bold;
            text-decoration: underline;
          }
        }
      }

    }
  }
}



.hamburger-toggle {
  font-size: 3.5rem;
  margin: 46px 24px;
  cursor: pointer;
}

.header-up{
  height: 48px;
  transition: all .3s ease 0s;
  -webkit-transition: all .3s ease 0s;
}

.header-main {
  height: 150px;
  background: @brand-primary;
  color: #fff;
  padding: 0;
  position: relative;
  transition: all .3s ease 0s;
  -webkit-transition: all .3s ease 0s;

  .toggle-text {
    display: block;
    margin-top: -8px;
    font-size: 1.1rem;
    text-transform: uppercase;
  }

  a {
    color: #fff;
  }

  .icon-social {
    text-align: right;
    margin-top: 5px;

    a {
      font-size: 3rem;
      display: inline-block;
      margin-left: 15px;
    }
  }

  .site-title {
    color: #fff;
    font-family: @font-footer;
    font-size: 3.7rem;
    padding: 36px 0;



    .subtitle {
      font-size: 1.8rem;
      display: block;
    }
  }

  .ricerca {
    margin-top: 5px;

    label {
      display: none;
    }

    input.form-text {
      border: none;
      border-radius: 0;
      font-size: 1.5rem;
      height: 50px;
    }

    button {
      color: #fff;
      background-color: #333;
      border: none;
      border-radius: 0;
      margin-right: 0;
      height: 50px;
      width: 50px;
      margin-left: -4px;
      font-size: 2.5rem;
    }
  }

}

.header-down {
  height: 60px;
  background-color: @brand-secondary;
  text-align: center;
  transition: all .3s ease 0s;
  -webkit-transition: all .3s ease 0s;

  .navbar-nav {
    display: inline-block;
    float: none !important;
    padding: 2px;
    width: 100%;

    li:first-child {
      display: none;
    }
    
    li {
      display: inline-block;
      float: none !important;
    }

    a {
      color: #fff;
      font-family: @font-footer;
      font-size: 2rem;

      &:hover,&:active, &:focus {
        background-color: transparent;
        text-decoration: underline;
      }
    
    }
  }
}

.region-header {
  margin-bottom: 20px;

  h2.block-title {
    font-size: 2.5rem;
    color: @gray-light;
  }
}

